changed usage of DataExtractor

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -2,78 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\danie\\OneDrive\\Dokumente\\Data Science\\SS2024\\Internet of Things\\Projekt\\Preprocessing_M.py:193: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  df.loc[:, \"building_name\"] = df[\"room_number\"].str.replace('\\d+', '', regex = True)\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'Data_Extractor' from 'Preprocessing_M' (c:\\Users\\danie\\OneDrive\\Dokumente\\Data Science\\SS2024\\Internet of Things\\Projekt\\Preprocessing_M.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPreprocessing_M\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Data_Extractor, Data_Preprocessing\n\u001b[0;32m      3\u001b[0m de \u001b[38;5;241m=\u001b[39m Data_Extractor(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/danie/hka-aqm-data\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/danie/building_M_data\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m df \u001b[38;5;241m=\u001b[39m de\u001b[38;5;241m.\u001b[39mcreate_df()\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Data_Extractor' from 'Preprocessing_M' (c:\\Users\\danie\\OneDrive\\Dokumente\\Data Science\\SS2024\\Internet of Things\\Projekt\\Preprocessing_M.py)"
+     ]
+    }
+   ],
    "source": [
-    "# import requests\n",
+    "from Preprocessing_M import DataExtractor, DataPreprocessing\n",
     "\n",
+    "de = DataExtractor(\"C:/Users/danie/hka-aqm-data\", \"C:/Users/danie/building_M_data\")\n",
     "\n",
-    "\n",
-    "# def download_file(url, save_path):\n",
-    "#     response = requests.get(url)\n",
-    "#     with open(save_path, 'wb') as file:\n",
-    "#         file.write(response.content)\n",
-    "#     print(\"Downloaded successfully!\")\n",
-    "\n",
-    "\n",
-    "# from bs4 import BeautifulSoup\n",
-    "# import urllib.request\n",
-    "\n",
-    "# parser = 'html.parser'\n",
-    "\n",
-    "# url = \"https://bwsyncandshare.kit.edu/s/ooNSgk2aN9opB5S\"\n",
-    "\n",
-    "\n",
-    "# resp = urllib.request.urlopen(url)\n",
-    "# soup = BeautifulSoup(resp, parser, from_encoding=resp.info().get_param('charset'))\n",
-    "\n",
-    "# all_links = list()\n",
-    "\n",
-    "# for link in soup.find_all('a', href=True):\n",
-    "#     print(link['href'])\n",
-    "\n",
-    "#     valid_link_name = (\".tar\" in link[\"href\"]) or (\"/download\" in link[\"href\"])\n",
-    "\n",
-    "#     if valid_link_name and link[\"href\"] not in all_links:\n",
-    "#         print(\"YEA\")\n",
-    "#         format = link[\"href\"].split(\".\")[-1]\n",
-    "#         name = link[\"href\"].split(\".\")[-2].split(\"/\")[-1]\n",
-    "\n",
-    "#         if format not in [\"zip\", \"tar\", \"csv\", \"parquet\", \"avro\", \"json\"]:\n",
-    "#             format = \"tar\"\n",
-    "#         download_file(link[\"href\"], f\"D:/{name}.{format}\")\n",
-    "\n",
-    "#     all_links.append(link[\"href\"])\n",
-    "\n",
-    "\n",
-    "# import tarfile\n",
-    "\n",
-    "# if format == \"tar\":\n",
-    "\n",
-    "#     with tarfile.open(f\"D:/{name}.{format}\", \"r\") as tar:\n",
-    "#                         df_list = []\n",
-    "#                         for file in tar.getmembers():\n",
-    "#                             # extract the DAT file\n",
-    "#                             dat_data = tar.extractfile(file)\n",
-    "                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from Preprocessing_M import Data_Extractor, Data_Preprocessing\n",
-    "\n",
-    "de = Data_Extractor(\"C:/Users/danie/hka-aqm-data\", \"C:/Users/danie/hka-aqm-data/hka-aqm-data\")\n",
-    "directory = \"C:/Users/danie/hka-aqm-data/hka-aqm-data\"\n",
-    "\n",
-    "de.extract_zip_files(directory)\n",
-    "de.delete_zip_files(directory)\n",
-    "\n",
-    "df = de.get_data(directory)"
+    "df = de.create_df()"
    ]
   },
   {
