--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -6,29 +6,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\danie\\OneDrive\\Dokumente\\Data Science\\SS2024\\Internet of Things\\Projekt\\Preprocessing_M.py:193: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "  df.loc[:, \"building_name\"] = df[\"room_number\"].str.replace('\\d+', '', regex = True)\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Data_Extractor' from 'Preprocessing_M' (c:\\Users\\danie\\OneDrive\\Dokumente\\Data Science\\SS2024\\Internet of Things\\Projekt\\Preprocessing_M.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mPreprocessing_M\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Data_Extractor, Data_Preprocessing\n\u001b[0;32m      3\u001b[0m de \u001b[38;5;241m=\u001b[39m Data_Extractor(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/danie/hka-aqm-data\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/danie/building_M_data\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      5\u001b[0m df \u001b[38;5;241m=\u001b[39m de\u001b[38;5;241m.\u001b[39mcreate_df()\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Data_Extractor' from 'Preprocessing_M' (c:\\Users\\danie\\OneDrive\\Dokumente\\Data Science\\SS2024\\Internet of Things\\Projekt\\Preprocessing_M.py)"
+      "No .dat files found in C:/Users/danie/building_M_data. \n",
+      " Trying to extract files from the original directory D:/hka-aqm-m\n",
+      "Read data successfully.\n",
+      "Data contains 979166 data points and 18 columns.\n"
      ]
     }
    ],
    "source": [
     "from Preprocessing_M import DataExtractor, DataPreprocessing\n",
     "\n",
-    "de = DataExtractor(\"C:/Users/danie/hka-aqm-data\", \"C:/Users/danie/building_M_data\")\n",
+    "de = DataExtractor(\"D:/hka-aqm-m\", \"C:/Users/danie/building_M_data\")\n",
     "\n",
     "df = de.create_df()"
    ]
@@ -133,6 +124,15 @@
    "outputs": [],
    "source": [
     "df_m[df_m.tmp > 50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_m[df_m.tmp < 10]"
    ]
   },
   {
@@ -1394,9 +1394,7 @@
     "\n",
     "dp = Data_Preprocessing(get_outliers_out = True)\n",
     "\n",
-    "df_preprocessed = dp.preprocess_df(df)\n",
-    "\n",
-    "df_m_preprocessed = df_preprocessed[df_preprocessed.building_name == \"m\"]"
+    "df_preprocessed = dp.preprocess_df(df)"
    ]
   }
  ],
