moved files into different folders for better overview

--- a/ML_Preparation/exploratory_data_analysis.ipynb
+++ b/ML_Preparation/exploratory_data_analysis.ipynb
@@ -11,8 +11,7 @@
      "text": [
       "No .dat files found in C:/Users/danie/building_M_data. \n",
       " Trying to extract files from the original directory D:/hka-aqm-m\n",
-      "Read data successfully.\n",
-      "Data contains 979166 data points and 18 columns.\n"
+      "No .dat files found in D:/hka-aqm-m. Empty DataFrame returned.\n"
      ]
     }
    ],
