--- a/CO2_forecasting.ipynb
+++ b/CO2_forecasting.ipynb
@@ -26,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp = DataPreprocessing()\n",
+    "dp = DataPreprocessing(label = \"CO2\")\n",
     "\n",
     "df_preprocessed = dp.preprocess_df(df, rolling_window = \"7d\", sample_time = \"1d\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -45,11 +45,11 @@
       "text/plain": [
        "Index(['date_time', 'tmp', 'hum', 'CO2', 'VOC', 'vis', 'IR', 'BLE', 'rssi',\n",
        "       'snr', 'tavg', 'tmin', 'tmax', 'prcp', 'wdir', 'wspd', 'wpgt', 'pres',\n",
-       "       'room_number', 'time_diff_sec', 'hum_diff', 'CO2_diff', 'VOC_diff',\n",
+       "       'room_number', 'time_diff_sec', 'tmp_diff', 'hum_diff', 'VOC_diff',\n",
        "       'vis_diff', 'IR_diff', 'BLE_diff', 'tavg_diff', 'tmin_diff',\n",
        "       'tmax_diff', 'prcp_diff', 'wdir_diff', 'wspd_diff', 'wpgt_diff',\n",
-       "       'pres_diff', 'time_diff_sec_per_sec', 'hum_diff_per_sec',\n",
-       "       'CO2_diff_per_sec', 'VOC_diff_per_sec', 'vis_diff_per_sec',\n",
+       "       'pres_diff', 'time_diff_sec_per_sec', 'tmp_diff_per_sec',\n",
+       "       'hum_diff_per_sec', 'VOC_diff_per_sec', 'vis_diff_per_sec',\n",
        "       'IR_diff_per_sec', 'BLE_diff_per_sec', 'tavg_diff_per_sec',\n",
        "       'tmin_diff_per_sec', 'tmax_diff_per_sec', 'prcp_diff_per_sec',\n",
        "       'wdir_diff_per_sec', 'wspd_diff_per_sec', 'wpgt_diff_per_sec',\n",
@@ -58,7 +58,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from ML_Preparation.Feature_Engineering import *\n",
     "\n",
-    "fe = FeatureEngineering(df_preprocessed.drop(columns = [\"CO2_diff\", \"CO2_diff_per_sec\", \"VOC_CO2_ratio\"]), \n",
+    "fe = FeatureEngineering(df_preprocessed.drop(columns = [\"VOC_CO2_ratio\"]), \n",
     "                        label = \"CO2\", \n",
     "                        categorical_features = [\"season\", \"room_number\", \"dayofweek\", \"color\"],\n",
     "                        automated_feature_engineering = False)\n",
