added dashboard with multiple pages

--- a/explorative_datenanalyse_m_gebäude_max.ipynb
+++ b/explorative_datenanalyse_m_gebäude_max.ipynb
@@ -281,6 +281,45 @@
     "# Anzeige\n",
     "fig.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_m.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.histogram(df_m[\"time_diff_sec\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# KDE-Plot\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.kdeplot(df_m[\"time_diff_sec\"], shade=True)\n",
+    "plt.title(\"KDE Plot of Time Differences\")\n",
+    "plt.xlabel(\"Time Difference (seconds)\")\n",
+    "plt.ylabel(\"Density\")\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
