Integrated first plots to "Gesamtansicht"

--- a/exploratory_data_analysis_dashboard.ipynb
+++ b/exploratory_data_analysis_dashboard.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ML_Preparation.Preprocessing_M import DataExtractor, DataPreprocessing\n",
+    "from Preprocessing_M import DataExtractor, DataPreprocessing\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
