changed model names

--- a/CO2_forecasting.ipynb
+++ b/CO2_forecasting.ipynb
@@ -306,9 +306,9 @@
    ],
    "source": [
     "if train_models:\n",
-    "    model.model.save(\"CO2_Forecasting_Model.keras\")\n",
-    "    model_no_weather.model.save(\"CO2_Forecasting_Model_no_weather.keras\")\n",
-    "    model_no_seasons.model.save(\"CO2_Forecasting_Model_no_seasons.keras\")\n",
+    "    model.model.save(f\"{label}_Forecasting_Model.keras\")\n",
+    "    model_no_weather.model.save(f\"{label}_Forecasting_Model_no_weather.keras\")\n",
+    "    model_no_seasons.model.save(f\"{label}_Forecasting_Model_no_seasons.keras\")\n",
     "\n",
     "    pred = model.model.predict(fe.X_test)\n",
     "    pred_no_weather = model_no_weather.model.predict(fe_no_weather.X_test)\n",
@@ -22667,14 +22667,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m201/201\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 867us/step\n"
+      "\u001b[1m201/201\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 883us/step\n"
      ]
     },
     {
@@ -22799,7 +22799,7 @@
        "[6403 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22810,7 +22810,7 @@
     "else:\n",
     "    forecasted_pred = deployer.predict(x = deployer.x, model = model)\n",
     "\n",
-    "px.line(forecasted_pred, y = [\"prediction_t+0\"], color = \"room_number\")"
+    "forecasted_pred"
    ]
   }
  ],
