--- a/CO2_forecasting.ipynb
+++ b/CO2_forecasting.ipynb
@@ -228,9 +228,9 @@
     "train_models = False\n",
     "\n",
     "try:\n",
-    "    model = tf.keras.models.load_model(\"CO2_Forecasting_Model.keras\")\n",
-    "    model_no_weather = tf.keras.models.load_model(\"CO2_Forecasting_Model_no_weather.keras\")\n",
-    "    model_no_seasons = tf.keras.models.load_model(\"CO2_Forecasting_Model_no_seasons.keras\")\n",
+    "    model = tf.keras.models.load_model(f\"{label}_Forecasting_Model.keras\")\n",
+    "    model_no_weather = tf.keras.models.load_model(f\"{label}_Forecasting_Model_no_weather.keras\")\n",
+    "    model_no_seasons = tf.keras.models.load_model(f\"{label}_Forecasting_Model_no_seasons.keras\")\n",
     "except:\n",
     "    print(\"Models couldn't be loaded. Train new models.\")\n",
     "    train_models = True"
@@ -291,16 +291,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 11ms/step \n",
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 13ms/step \n",
-      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 11ms/step \n"
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1000us/step\n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1000us/step\n",
+      "\u001b[1m40/40\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 951us/step\n"
      ]
     }
    ],
