updated dashboard with forecasting

--- a/explorative_datenanalyse_m_gebäude_max.ipynb
+++ b/explorative_datenanalyse_m_gebäude_max.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +66,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date_time', 'tmp', 'hum', 'CO2', 'VOC', 'vis', 'IR', 'BLE', 'rssi',\n",
+       "       'snr', 'room_number', 'building_name', 'time_diff_sec', 'tmp_diff',\n",
+       "       'hum_diff', 'CO2_diff', 'VOC_diff', 'vis_diff', 'IR_diff', 'BLE_diff',\n",
+       "       'CO2_diff_per_sec', 'VOC_diff_per_sec', 'tmp_diff_per_sec',\n",
+       "       'hum_diff_per_sec', 'IR_diff_per_sec', 'vis_diff_per_sec', 'year',\n",
+       "       'month', 'dayofweek', 'hour', 'color', 'VOC_CO2_ratio'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_m.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_m.columns"
+    "df_m.dayofweek.unique()\n",
+    "wochentage_deutsch = [\"Montag\", \"Dienstag\", \"Mittwoch\", \"Donnerstag\", \"Freitag\", \"Samstag\", \"Sonntag\"]\n",
+    "\n",
+    "df_m[\"dayofweekstr\"] = [wochentage_deutsch[i] for i in df_m[\"dayofweek\"]]"
    ]
   },
   {
